templates/careers_template.yaml
---
# Source: careers/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: careers
  labels:
    helm.sh/chart: careers-0.0.3
    app.kubernetes.io/name: careers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: careers
    app.kubernetes.io/instance: release-name
---
# Source: careers/templates/web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careers-web
  labels:
    app.kubernetes.io/component: web
    helm.sh/chart: careers-0.0.3
    app.kubernetes.io/name: careers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: web
      app.kubernetes.io/name: careers
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "false"
      labels:
        app.kubernetes.io/component: web
        app.kubernetes.io/name: careers
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: careers
      securityContext:
        null
      containers:
        - name: careers
          securityContext:
            {}
          image: "783633885093.dkr.ecr.us-west-2.amazonaws.com/careers:stg-23f503cb"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: __lbheartbeat__/
              port: http
          readinessProbe:
            httpGet:
              path: __lbheartbeat__/
              port: http
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: careers/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: careers
  labels:
    helm.sh/chart: careers-0.0.3
    app.kubernetes.io/name: careers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: "careers.mozilla.org"
      http:
        paths:
          - path: /
            backend:
              serviceName: careers
              servicePort: 80
---
# Source: careers/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "careers-test-connection"
  labels:
    helm.sh/chart: careers-0.0.3
    app.kubernetes.io/name: careers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ['curl']
      args: ['-L', 'careers:80']
  restartPolicy: Never
